增加 检查图数据库neo4j

--- a/todo.txt
+++ b/todo.txt
@@ -15,3 +15,6 @@
 11、独立的生成向量数据库的功能。
 12、输出多个重复的答案或对话。
 13、面向对象化的改造
+14、main函数中，执行时出现等待屏幕输入后打印好多本应该不存在的文字。
+15、图数据库、混合检索
+16、192.168.10.138:7474 neo4j Neo4j9527 #记录
