--- a/todo.txt
+++ b/todo.txt
@@ -13,8 +13,11 @@
    #1.10版本路径下只有sqllite是正确的。不同的版本不同。
 10、如何判断rag的推理是否正确？
 11、独立的生成向量数据库的功能。
-12、输出多个重复的答案或对话。
+12、输出多个重复的答案或对话，需要检查、去重
 13、面向对象化的改造
 14、main函数中，执行时出现等待屏幕输入后打印好多本应该不存在的文字。
 15、图数据库、混合检索
-16、192.168.10.138:7474 neo4j Neo4j9527 #记录
+    #添加完成
+16、192.168.10.138:7474 neo4j Neo4j9527#用作记录使用 
+17、增加医学实体识别
+    #增加医学实体识别lixin12345
