--- a/todo.txt
+++ b/todo.txt
@@ -21,3 +21,10 @@
 16、192.168.10.138:7474 neo4j Neo4j9527#用作记录使用
 17、增加医学实体识别
     #增加医学实体识别lixin12345
+18、病历应该写入哪个库？向量数据库还是图数据库
+19、资料现在有三种：1、html 2、access 3、mysql
+    #1、希望给出文本或者pdf格式，因为本地没法打开
+    #2、需要导出到excel导出到导出为 CSV 文件
+    #3、迁移数据
+20
+
